Feature ETP-3503: Fix some bugs and improve code